--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,10 @@ html
 
 .game-start-menu
 {
-    background-color: rgba(255, 255, 255, 0.58);
-    max-width: 50%;
-    margin-left: auto;
-    margin-right:auto;
+    background-size: 50px;
     border-radius: 32px;
+    min-width: fit-content;
+    /* max-width: 20%; */
 }
 
 .header
@@ -58,6 +57,29 @@ html
 {
     color: white;
     text-shadow: 0px 0px 4px black;
+    font-weight: bold;
+}
+
+.player-input
+{
+    background: none;
+    border: none;
+    border-bottom: 2px solid gray;
+    transition-duration: 0.4s;
+    font-style: italic;
+    color:white;
+    text-shadow: 0px 0px 3px black;
+    font-weight: bold;
+    font-size:large;
+    text-align: right;
+}
+
+.player-input:hover
+{
+    background: none;
+    border: none;
+    border-bottom: 2px solid rgb(255, 57, 153);
+    transition-duration: 0.4s;
 }
 
 .start-button
