--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,13 @@ html
     color:white;
 }
 
+.game-div
+{
+    color:white;
+    font-size: xx-large;
+    text-shadow: 0px 0px 7px black;
+}
+
 .game-board
 {
     margin-left: auto;
@@ -106,5 +113,5 @@ html
 .board-button
 {
     text-align: center;
-    font-size: x-large;
+    font-size: xx-large;
 }
