--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,7 +80,7 @@ html
     transition-duration: 0.4s;
 }
 
-.start-button
+.ui-button
 {
     background-color: rgb(245, 245, 245);
     border-radius: 5px;
@@ -90,11 +90,17 @@ html
     transition-duration: 0.4s;
 }
 
-.start-button:hover
+.ui-button:hover
 {
     background-color: rgb(193, 129, 178);
     transition-duration: 0.4s;
     color:white;
+}
+
+.ui-button:active
+{
+    background-color: rgb(155, 103, 143);
+    transition-duration: 0.4s;
 }
 
 .game-div
@@ -110,8 +116,42 @@ html
     margin-right:auto;
 }
 
+.game-board td{
+    border: 5px inset;
+    transition-duration: 0.4s;
+}
+
+.game-board td:hover{
+    background-color: rgba(188, 97, 141, 0.379);
+    color:whitesmoke;
+    transition-duration: 0.4s;
+}
+
 .board-button
 {
     text-align: center;
     font-size: xx-large;
+    background: none;
+    border: none;
+    transition-duration: 0.4s;
+    color:whitesmoke;
+    text-shadow: none;
+}
+
+.board-button:hover{
+    color:rgb(136, 85, 122);
+    transition-duration: 0.4s;
+    text-shadow: none;
+}
+
+.board-button:active
+{
+    transition-duration: 0.1s;
+    color:rgb(83, 52, 75);
+    text-shadow: 0px 0px 10px rgb(69, 0, 66);
+}
+
+.give-up
+{
+    
 }
