--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,22 @@ html
     background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
 
+.message-box
+{
+    background-color: rgba(255, 255, 255, 0.4);
+    display: none;
+    width: fit-content;
+    border-radius: 5px;
+}
+
+.message-box-text
+{
+    color: white;
+    text-shadow: 0px 0px 4px black;
+    font-weight: bold;
+    text-align: center;
+}
+
 .game-start-menu
 {
     background-size: 50px;
